--- a/one.html
+++ b/one.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE>
+<html>
+  <head>
+    <title>Page 1<title>
+    <link src="one.html">
+  </head>
+      <body>
+        <h1>Page 1</h1>
+      </body>
+</html>
