--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>CSS Menu</h1>
         <ul>
             <li>
-                <a href="/chapter7-stylinglinks/one.html">Appetizers</a>
+                <a href="one.html">Appetizers</a>
             </li>
             <li>
                 <a href="two.html">Entrees</a>
