--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
     </nav>
     <p>
-        Learn more about <a href="https://edition.cnn.com/travel/article/world-best-food-dishes/index.html">Amazing Foods</a>.
+        Learn more about <a href="https://edition.cnn.com/travel/article/world-best-food-dishes/index.html" target="_blank">Amazing Foods</a>.
     </p>
     
 </body>
