--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <h2>CSS Menu</h1>
         <ul>
             <li>
-                <a href="one.html">Appetizers</a>
+                <a href="one.html" target="_blank">Appetizers</a>
             </li>
             <li>
-                <a href="two.html">Entrees</a>
+                <a href="two.html" target="_blank">Entrees</a>
             </li>
             <li>
-                <a href="three.html">Desserts</a>
+                <a href="three.html" target="_blank">Desserts</a>
             </li>
             <li>
-                <a href="four.html">Beverages</a>
+                <a href="four.html" target="_blank">Beverages</a>
             </li>
             <li>
-                <a href="about.html">About</a>
+                <a href="about.html" target="_blank">About</a>
             </li>
         </ul>
     </nav>
