--- a/appetizers.html
+++ b/appetizers.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Appetizers</title>
 </head>
 <body>
-    <h1>Page 2</h1>
+    <h1>Appetizers</h1>
+    <a href="#">Go Back</a>
 </body>
 </html>
