--- a/beverages.html
+++ b/beverages.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Beverages</title>
 </head>
 <body>
-    <h1>Page 4</h1>
+    <h1>Beverages</h1>
+    <a href="#">Go Back</a>
 </body>
 </html>
