--- a/entrees.html
+++ b/entrees.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Page 1</h1>
+    <h1>Entrees</h1>
+    <a href="#">Go Back</a>
 </body>
 </html>
