--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <h2>CSS Menu</h1>
         <ul>
             <li>
-                <a href="one.html" target="_blank">Appetizers</a>
+                <a href="appetizers.html" target="_blank">Appetizers</a>
             </li>
             <li>
-                <a href="two.html" target="_blank">Entrees</a>
+                <a href="entrees.html" target="_blank">Entrees</a>
             </li>
             <li>
-                <a href="three.html" target="_blank">Desserts</a>
+                <a href="desserts.html" target="_blank">Desserts</a>
             </li>
             <li>
-                <a href="four.html" target="_blank">Beverages</a>
+                <a href="beverages.html" target="_blank">Beverages</a>
             </li>
             <li>
                 <a href="about.html" target="_blank">About</a>
