--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <h2>CSS Menu</h1>
         <ul>
             <li>
-                <a href="appetizers.html" target="_blank">Appetizers</a>
+                <a href="appetizers.html">Appetizers</a>
             </li>
             <li>
-                <a href="entrees.html" target="_blank">Entrees</a>
+                <a href="entrees.html">Entrees</a>
             </li>
             <li>
-                <a href="desserts.html" target="_blank">Desserts</a>
+                <a href="desserts.html">Desserts</a>
             </li>
             <li>
-                <a href="beverages.html" target="_blank">Beverages</a>
+                <a href="beverages.html">Beverages</a>
             </li>
             <li>
-                <a href="about.html" target="_blank">About</a>
+                <a href="about.html">About</a>
             </li>
         </ul>
     </nav>
