--- a/entrees.html
+++ b/entrees.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Entrees</h1>
-    <a href="index.html">Go Back</a>
+    <p class="coming-soon">Coming soon...</p>
+    <a class="go-back-link" href="index.html">Go Back</a>
 </body>
 </html>
