--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Simple Restaurant Menu</title>
-    
+    <title>Simple Restaurant Menu</title> 
 </head>
+
 <body>
-    <nav>
-        <h2>CSS Menu</h1>
+    <nav class="menu">
+        <h1 id="menu-title">CSS Menu</h1>
         <ul>
             <li>
                 <a href="appetizers.html">Appetizers</a>
@@ -24,14 +24,14 @@
             <li>
                 <a href="beverages.html">Beverages</a>
             </li>
-            <li>
+            <li id="about">
                 <a href="about.html">About</a>
             </li>
         </ul>
     </nav>
-    <p>
+    <p id="amazing-foods">
         Learn more about <a href="https://edition.cnn.com/travel/article/world-best-food-dishes/index.html" target="_blank">Amazing Foods</a>.
     </p>
-    
 </body>
+
 </html>
