--- a/about.html
+++ b/about.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>About</h1>
-    <a href="index.html">Go Back</a>
+    <a class="home" href="index.html">Home</a>
 </body>
 </html>
