--- a/appetizers.html
+++ b/appetizers.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Appetizers</h1>
     <p class="coming-soon">Coming soon...</p>
-    <a class="go-back-link" href="index.html">Go Back</a>
+    <a class="home" href="index.html">Home</a>
 </body>
 </html>
